<resources>
    <string name="app_name">SKT-gas</string>
    <string name="login_title1">随时随地</string>
    <string name="login_title2">监控气站</string>
    <string name="login_title3">广州森考特节能设备有限公司</string>
    <string name="text_user_pwd">密  码：</string>
    <string name="text_user_name">用户名：</string>
    <string name="text_user_login">登录</string>
    <string name="text_hint">查询内容:</string>
    <string name="open">开</string>
    <string name="close">关</string>

    <string name="recharge">充值记录</string>
    <string name="changeDuty">交班统计</string>
    <string name="cash">现金统计</string>
    <string name="gas">加气记录</string>
    <string name="store">库存记录</string>
    <string name="backup">备用</string>

    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="query">查询</string>

    <string name="text_data_loading">正在加载中，请稍等...</string>
    <string name="text_data_error">获取数据失败</string>

    <string name="first_page">首页</string>
    <string name="pre_page">上一页</string>
    <string name="next_page">下一页</string>

    <string name="userNameNull">请输入用户名！</string>
    <string name="pwdNull">请输入密码！</string>
    <string name="loginFail">登录失败,请联系管理员！</string>
    <string name="loginSucced">登录成功！</string>

    <string name="banci">班次：</string>
    <string name="dutyName">班长：</string>
    <string name="userName">收款员：</string>
    <string name="dismiss">关闭</string>
</resources>
