<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    >
    <Button
        android:id="@+id/main_recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/recharge"
        android:background="@color/transparent"
        android:text="@string/recharge"
        />
    <Button
        android:id="@+id/main_change_duty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/change_duty"
        android:background="@color/transparent"
        android:text="@string/recharge"
        />
    <Button
        android:id="@+id/main_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/cash"
        android:background="@color/transparent"
        android:text="@string/recharge"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >
        <Button
            android:id="@+id/main_gas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/gas"
            android:background="@color/transparent"
            android:text="@string/gas"
            />
        <Button
            android:id="@+id/main_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/store"
            android:background="@color/transparent"
            android:text="@string/store"
            />
        <Button
            android:id="@+id/main_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/backup"
            android:background="@color/transparent"
            android:text="@string/backup"
            />
    </LinearLayout>
</LinearLayout>

