<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue"
    >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_centerInParent="true"
       >
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/logo"
           android:layout_gravity="center"
           />
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_title1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
            <TextView
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_title2"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_gravity="center"
           android:layout_marginLeft="40dp"
           android:layout_marginRight="40dp"
           android:layout_marginTop="90dp"
           android:background="@drawable/bg_round_border"
           android:gravity="center"
           android:orientation="horizontal">

           <TextView
               android:layout_width="90dp"
               android:layout_height="wrap_content"
               android:gravity="right"
               android:text="@string/text_user_name"
               android:textColor="@color/color_text1"
               android:textSize="@dimen/Z18" />

           <EditText
               android:id="@+id/username"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/transparent"
               android:gravity="left|center_vertical"
               android:singleLine="true" />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_gravity="center"
           android:layout_marginLeft="40dp"
           android:layout_marginRight="40dp"
           android:layout_marginTop="10dp"
           android:background="@drawable/bg_round_border"
           android:gravity="center"
           android:orientation="horizontal">

           <TextView
               android:layout_width="90dp"
               android:layout_height="wrap_content"
               android:gravity="right"
               android:text="@string/text_user_pwd"
               android:textColor="@color/color_text1"
               android:textSize="@dimen/Z18" />

           <EditText
               android:id="@+id/passwd"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/transparent"
               android:gravity="left|center_vertical"
               android:inputType="textPassword"
               android:singleLine="true" />
       </LinearLayout>

       <TextView
           android:id="@+id/login"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_marginLeft="40dp"
           android:layout_marginRight="40dp"
           android:layout_marginTop="40dp"
           android:background="@drawable/bg_round_solid_blue"
           android:gravity="center"
           android:text="@string/text_user_login"
           android:textColor="@color/white"
           android:textSize="@dimen/Z16" />
   </LinearLayout>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/login_title3"
           android:textColor="@color/white"
           android:textSize="@dimen/Z14"
           android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true"
           android:layout_marginBottom="20dp"
           />
</RelativeLayout>
