<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--
        //为了效果更好，toolbar使用单独的theme
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        //修改的是弹出菜单项的theme
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/recharge_ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_back" />

            <TextView
                android:id="@+id/recharge_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:textSize="@dimen/Z18" />

            <LinearLayout
                android:id="@+id/ll_start_time"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:background="@color/white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_selected_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/start_time"
                    android:textColor="@color/color_text2"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_end_time"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:background="@color/white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_selected_endtime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/start_time"
                    android:textColor="@color/color_text2"
                    android:textSize="15sp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/recharge_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:entries="@array/spinner_gas"></Spinner>

            <EditText
                android:id="@+id/et_recharge_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:hint="@string/text_hint"
                android:singleLine="true"
                android:textSize="@dimen/Z14" />

            <TextView
                android:id="@+id/recharge_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/query"
                android:textColor="@color/color_text1"
                android:textSize="@dimen/Z18" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/layout_draw"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.beidousat.querydata.widget.WidgetGasPager
                android:id="@+id/gasPaper"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <com.beidousat.querydata.base.WidgetPage
                android:id="@+id/w_page"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/layout_navigation"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/menu_main" />

    </android.support.v4.widget.DrawerLayout>
</LinearLayout>

